# Marco

./: .gitignore  README.md  meson.build
src/CZ/Marco/: CZMarcoVersion.h.in  MApp.cpp  MApp.h  MLog.cpp  MLog.h  MScreen.h  MTheme.cpp  MTheme.h  Marco.h
src/CZ/Marco/Extensions/: MForeignToplevel.cpp  MForeignToplevel.h  MForeignToplevelManager.cpp  MForeignToplevelManager.h
src/CZ/Marco/Nodes/: MCSDShadow.cpp  MDecorations.cpp  MDecorations.h  MShadowDecorations.cpp  MShadowDecorations.h  MVibrancyView.cpp
src/CZ/Marco/Private/: MLayerSurfacePrivate.cpp  MLayerSurfacePrivate.h  MMenuPrivate.cpp  MMenuPrivate.h  MPopupPrivate.cpp  MPopupPrivate.h  MSubsurfacePrivate.cpp  MSubsurfacePrivate.h  MSurfacePrivate.cpp  MSurfacePrivate.h  MToplevelPrivate.cpp  MToplevelPrivate.h
src/CZ/Marco/Protocols/LvrBackgroundBlur/: MLvrBackgroundManager.cpp  MLvrBackgroundManager.h  lvr-background-blur-client.h
src/CZ/Marco/Protocols/LvrPrivateHandle/: MLvrPrivateHandleManager.cpp  MLvrPrivateHandleManager.h  lvr-private-handle-client.h
src/CZ/Marco/Protocols/Wayland/: MWlKeyboard.cpp  MWlKeyboard.h  MWlOutput.cpp  MWlOutput.h  MWlPointer.cpp  MWlPointer.h  MWlRegistry.cpp  MWlRegistry.h  MWlSeat.cpp  MWlSeat.h
src/CZ/Marco/Protocols/WlrForeignToplevel/: MWlrForeignToplevelHandle.cpp  MWlrForeignToplevelHandle.h  MWlrForeignToplevelManager.cpp  MWlrForeignToplevelManager.h
src/CZ/Marco/Protocols/XdgShell/: MXdgWmBase.cpp  MXdgWmBase.h
src/CZ/Marco/Roles/: MLayerSurface.cpp  MLayerSurface.h  MMenu.cpp  MMenu.h  MPopup.cpp  MPopup.h  MSubsurface.cpp  MSubsurface.h  MSurface.cpp  MSurface.h  MToplevel.cpp  MToplevel.h
src/CZ/Marco/input/: MPointer.cpp  MPointer.h
src/Marco/: MApplication.cpp  MApplication.h  MProxy.h  MScreen.h  MTheme.cpp  MTheme.h  Marco.h
src/Marco/input/: MKeyboard.h  MPointer.cpp  MPointer.h
src/Marco/nodes/: MCSDShadow.cpp  MCSDShadow.h  MWindowShadow.cpp  MWindowShadow.h
src/Marco/private/: MLayerSurfacePrivate.cpp  MLayerSurfacePrivate.h  MSubSurfacePrivate.cpp  MSubSurfacePrivate.h  MSurfacePrivate.cpp  MSurfacePrivate.h  MToplevelPrivate.cpp  MToplevelPrivate.h
src/Marco/roles/: MLayerSurface.cpp  MSubSurface.cpp  MSubSurface.h  MSurface.cpp  MSurface.h  MToplevel.cpp  MToplevel.h
src/Marco/utils/: MEventSource.cpp  MEventSource.h  MImageLoader.h
src/examples/cz-marco-layer-shell/: main.cpp  meson.build
src/examples/cz-marco-popup/: main.cpp  meson.build
src/examples/cz-marco-subsurfaces/: main.cpp  meson.build
src/examples/cz-marco-toplevel/: main.cpp  meson.build
src/examples/cz-marco-toplevel-custom-csd/: main.cpp  meson.build
src/examples/marco-basic/: main.cpp  meson.build
src/examples/marco-layer-shell/: DockContainer.cpp  main.cpp  meson.build
src/examples/marco-subsurfaces/: main.cpp  meson.build
src/examples/marco-toplevel/: main.cpp  meson.build
src/examples/marco-toplevel-custom-csd/: meson.build
subprojects/: Kay.wrap  kay.wrap
